--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,13 @@
     border: 6px solid #fff;
     border-radius: 50%;
     box-shadow: 0 0 2em rgba(0, 0, 0, 0.49);
+    margin-top: 24px;
   }
   
   #sect-sec {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
   }
