--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,9 @@
     gap: 24px;
     margin-top: 48px;
   }
+
+  #habilidades {
+    margin-top: 24px;
+    border-top: 1px #007 solid;
+    padding: 18px;
+  }
