--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ figure > figcaption {
   background-color: #7d39fa8e;
 }
 
-#gitGitHubCard {
+#gitGithubCard {
   background-color: #ffa60067;
 }
 
